<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AccountFragment">

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/weneeykimani"
            android:textColor="@color/black"
            android:textSize="20sp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/add_icon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="250dp"
                android:layout_marginTop="10dp"
                android:layout_toStartOf="@+id/menu_icon"
                android:padding="5dp"
                android:src="@drawable/add_box_icon" />

            <ImageView
                android:id="@+id/menu_icon"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="-1dp"
                android:padding="5dp"
                android:src="@drawable/menu_icon" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LL1"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="60dp"
                android:layout_marginStart="10dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                android:src="@drawable/test" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_toEndOf="@+id/profile_photo">

                <LinearLayout
                    android:id="@+id/LLA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_19"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/posts"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LLB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/LLA"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_739"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LLC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:layout_toEndOf="@+id/LLB"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/_995"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </LinearLayout>
            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/winnie_kimani"
            android:id="@+id/real_name"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:id="@+id/RLD"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/LL3">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:backgroundTint="#4D000000"
            android:layout_weight="1"
            android:text="@string/edit_profile"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            app:cornerRadius="10dp" />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_weight="0"
            android:background="@drawable/add_user_bg"
            android:src="@drawable/add_user_icon"/>



    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/LLE"
    android:layout_below="@id/RLD"
    android:layout_marginTop="5dp"
    android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/places_highlights_rc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RLD"
        android:orientation="horizontal" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:id="@+id/LLF"
        android:layout_below="@+id/LLE">

        <com.google.android.material.tabs.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabInlineLabel="true"
            app:tabMode="fixed"
            app:tabGravity="fill"
            app:tabIndicatorColor="@color/black"
            android:background="@color/white"
            android:id="@+id/tab_layout"/>
        <androidx.viewpager2.widget.ViewPager2
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/view_pager">

        </androidx.viewpager2.widget.ViewPager2>
    </LinearLayout>


</RelativeLayout>