<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ReelsFragment">

    <ImageView
        android:id="@+id/reels_frag_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:src="@drawable/test" />


    <RelativeLayout
        android:id="@+id/RL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/like_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:src="@drawable/heart_customized_icon"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/no_of_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/_58_6k"
                android:textColor="@color/white" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/message_RL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/like_ll"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/reels_messages"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/message_topic"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/no_of_reels_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reels_messages"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:text="@string/_50"
                android:textColor="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/dots_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/message_RL"
            android:layout_alignParentEnd="true"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/reels_share"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/send_icon_customized"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/reels_three_dots"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/reels_share"
                android:layout_marginTop="6dp"
                android:src="@drawable/dots_icon"
                app:tint="@color/white" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dots_ll"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@+id/dots_ll"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/reels_circle_imageview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:src="@drawable/test" />

            <TextView
                android:id="@+id/name_of_the_reel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/follow"
                android:layout_toEndOf="@id/reels_circle_imageview"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/winnie_peace"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/follow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:backgroundTint="#40000000"
                android:text="@string/follow"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>